tests/ui/suggestions/issue-66968-suggest-sorted-words.rs
fn main() {
    let a_longer_variable_name = 1;
    println!("{}", a_variable_longer_name); //~ ERROR E0425
}
